--- a/src/FlossApp.Wasm/Layout/MainLayout.razor
+++ b/src/FlossApp.Wasm/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
     </div>
 
     <main>
-        <article>
+        <article class="px-4 py-2">
             @Body
         </article>
     </main>
