--- a/src/FlossApp.Wasm/Layout/NavMenu.razor
+++ b/src/FlossApp.Wasm/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Color similarity
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/ImageFilter">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Filtering
+            </NavLink>
+        </div>
     </nav>
 </div>
 
