--- a/src/FlossApp.Wasm/Pages/Home.razor
+++ b/src/FlossApp.Wasm/Pages/Home.razor
@@ -1,8 +1,52 @@
 ﻿@page "/"
+@inject NavigationManager Navigation
 
-<PageTitle>Home</PageTitle>
+<style>
+    .masonry-container {
+        -webkit-column-count: 3;
+        column-count: 3;
+        column-gap: 1rem;
+    }
 
-<h1>Hello, world!</h1>
+    .masonry-item {
+        -webkit-break-inside: avoid;
+        break-inside: avoid;
+        margin-bottom: 1rem;
+        padding: 2rem;
+        text-align: center;
+        cursor: pointer;
+        -ms-transition: transform 0.2s ease-in-out;
+        -o-transition: transform 0.2s ease-in-out;
+        -webkit-transition: transform 0.2s ease-in-out;
+        transition: transform 0.2s ease-in-out;
+        -ms-border-radius: 1rem;
+        border-radius: 1rem;
+    }
 
-Welcome to your new app.
+        .masonry-item:hover {
+            -ms-transform: scale(1.03);
+            -webkit-transform: scale(1.03);
+            transform: scale(1.03);
+        }
+
+    .button-text {
+        margin-top: 1rem;
+        font-size: 1.25rem;
+        font-weight: 500;
+    }
+
+</style>
+
+<div class="masonry-container">
+    <MudPaper Class="masonry-item" Elevation="3" @onclick="@(() => Navigation.NavigateTo("/FindSimilarColorsPage"))">
+        <MudIcon Icon="@Icons.Material.Filled.Compare" Size="Size.Large" />
+        <div class="button-text">Color Convert</div>
+    </MudPaper>
+
+
+    <MudPaper Class="masonry-item" Elevation="3" @onclick="@(() => Navigation.NavigateTo("/ImageFilter"))">
+        <MudIcon Icon="@Icons.Material.Filled.FilterHdr" Size="Size.Large" />
+        <div class="button-text">Image Filtering</div>
+    </MudPaper>
+</div>
 
