--- a/src/FlossApp.Wasm/Layout/NavMenu.razor
+++ b/src/FlossApp.Wasm/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using FlossApp.Wasm.Consts
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">FlossApp.Wasm</a>
+        <a class="navbar-brand" href="">@(AppConsts.ApplicationName)</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
