--- a/src/FlossApp.Wasm/Pages/ImageFilterPage.razor
+++ b/src/FlossApp.Wasm/Pages/ImageFilterPage.razor
@@ -106,6 +106,21 @@
     </div>
 
     <div class="row">
+        <MudExpansionPanels Class="w-100">
+            <MudExpansionPanel Text="Advanced">
+                <div class="row">
+                    <div class="col">
+                        <EnumPicker T="ImageSharpKnownResamplers" Label="Resampler" @bind-Value="ViewModel.ResamplerKind" />
+                    </div>
+                    <div class="col">
+                        <NullableEnumPicker T="ImageSharpKnownDitherings" Label="Dither" @bind-Value="ViewModel.DitherKind" />
+                    </div>
+                </div>
+            </MudExpansionPanel>
+        </MudExpansionPanels>
+    </div>
+
+    <div class="row">
         <div class="col" style="text-align: center;">
             <MudFileUpload T="IBrowserFile" FilesChanged="UploadFiles" MaximumFileCount="1">
                 <ActivatorContent>
