--- a/src/FlossApp.Wasm/Components/RichColorPicker.razor
+++ b/src/FlossApp.Wasm/Components/RichColorPicker.razor
@@ -21,6 +21,10 @@ else if (Schema is ColorSchema.Hsl)
                     ShowAlpha="false"
                     ColorPickerMode="ColorPickerMode.HSL" ShowModeSwitch="false" />
 }
+else if (Schema is ColorSchema.Cmyk)
+{
+    <CmykPicker @bind-Value="ViewModel.SelectedColor" />
+}
 else
 {
     <MudAutocomplete T="RichColorModel" Label="@Label" @bind-Value="Value"
