--- a/src/FlossApp.Wasm/Pages/Home.razor
+++ b/src/FlossApp.Wasm/Pages/Home.razor
@@ -48,5 +48,10 @@
         <MudIcon Icon="@Icons.Material.Filled.FilterHdr" Size="Size.Large" />
         <div class="button-text">Image Filtering</div>
     </MudPaper>
+    
+    <MudPaper Class="masonry-item" Elevation="3" @onclick="@(() => Navigation.NavigateTo("/ImageUpscaler"))">
+        <MudIcon Icon="@Icons.Material.Filled.LinearScale" Size="Size.Large" />
+        <div class="button-text">Upscaler</div>
+    </MudPaper>
 </div>
 
