--- a/src/FlossApp.Wasm/Layout/MainLayout.razor
+++ b/src/FlossApp.Wasm/Layout/MainLayout.razor
@@ -1,4 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using CommunityToolkit.Mvvm.Messaging
+@using FlossApp.Application.Enums
+@using FlossApp.Application.Messages
+@inherits LayoutComponentBase
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -15,3 +18,30 @@
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+
+@code
+{
+    [Inject] private ISnackbar Snackbar { get; set; } = null!;
+
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        WeakReferenceMessenger.Default.Register<SnackbarMessage>(this, OnSnackbarMessage);
+    }
+
+    private void OnSnackbarMessage(object recipient, SnackbarMessage message)
+    {
+        Severity severity = message.Severity switch
+        {
+            SnackbarSeverity.Normal => Severity.Normal,
+            SnackbarSeverity.Info => Severity.Info,
+            SnackbarSeverity.Success => Severity.Success,
+            SnackbarSeverity.Warn => Severity.Warning,
+            SnackbarSeverity.Error => Severity.Error,
+            null => Severity.Normal,
+            _ => throw new ArgumentOutOfRangeException()
+        };
+
+        Snackbar.Add(message.Message, severity, key: message.Key);
+    }
+}
