--- a/src/FlossApp.Wasm/Pages/Home.razor
+++ b/src/FlossApp.Wasm/Pages/Home.razor
@@ -53,5 +53,10 @@
         <MudIcon Icon="@Icons.Material.Filled.LinearScale" Size="Size.Large" />
         <div class="button-text">Upscaler</div>
     </MudPaper>
+    
+    <MudPaper Class="masonry-item" Elevation="3" @onclick="@(() => Navigation.NavigateTo("/HoopSizer"))">
+        <MudIcon Icon="@Icons.Material.Filled.FormatSize" Size="Size.Large" />
+        <div class="button-text">Hoop sizer</div>
+    </MudPaper>
 </div>
 
