Better exception details

--- a/src/FlossApp.Wasm/Layout/MainLayout.razor
+++ b/src/FlossApp.Wasm/Layout/MainLayout.razor
@@ -28,7 +28,7 @@
 
                         <MudExpansionPanels Class="mb-3">
                             <MudExpansionPanel Text="Details">
-                                <p>TODO exception details component</p>
+                                <ExceptionDetailsComponent Ex="@context" />
                             </MudExpansionPanel>
                         </MudExpansionPanels>
 
