--- a/src/FlossApp.Wasm/Layout/MainLayout.razor
+++ b/src/FlossApp.Wasm/Layout/MainLayout.razor
@@ -5,13 +5,32 @@
 
 <PageTitle>@AppConsts.ApplicationName</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="page" style="height: 100svh;">
+    <MudPaper Style="@($"background-color: {CustomTheme1.Instance.PaletteLight.Primary}")">
+        <MudToolBar>
+            <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Class="mr-5"
+                           OnClick="OpenDrawer" />
+        </MudToolBar>
+    </MudPaper>
 
     <main>
         <article class="px-4 py-2">
+            <MudDrawer @bind-Open="_isNavbarOpen" Elevation="1" Variant="DrawerVariant.Temporary" OverlayAutoClose="true"
+                       Anchor="Anchor.Left">
+                <MudDrawerHeader>
+                    <MudText Typo="Typo.h6">@AppConsts.ApplicationName</MudText>
+                </MudDrawerHeader>
+
+                <MudNavMenu>
+                    <MudDivider Class="my-2" />
+                    <MudNavLink Href="/">Home</MudNavLink>
+                    <MudNavLink Href="/FindSimilarColorsPage">Color Convert</MudNavLink>
+                    <MudNavLink Href="/ImageFilter">Image Filtering</MudNavLink>
+                    <MudNavLink Href="/HoopSizer">Hoop Sizer</MudNavLink>
+                    <MudNavLink Href="/ImageUpscaler">Upscaler</MudNavLink>
+                </MudNavMenu>
+            </MudDrawer>
+
             <GlobalErrorBoundary @ref="_errorBoundary">
                 <ChildContent>
                     @Body
@@ -63,3 +82,13 @@
 <MudPopoverProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+
+@code
+{
+    private bool _isNavbarOpen;
+
+    private void OpenDrawer()
+    {
+        _isNavbarOpen = true;
+    }
+}
